# auto_ocr

./: .gitignore  COMPREHENSIVE_PIPELINE_ROADMAP.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION_GUIDE.md  QUICK_START.md  README.md  content.text  docker-compose.yml  myocrfirst.code-workspace  pyproject.toml  railway.json  render.yaml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
autoocr/: __init__.py  cli.py
autoocr/api/: __init__.py  main.py  pipeline.py  preprocessor.py
autoocr/api/modules/: __init__.py  artifact_removal.py  background_clean.py  base_module.py  binarize.py  color_correction.py  de_raster.py  denoise.py  deskew.py  dots_removal.py  edge_mask.py  enhance.py  guilloche_removal.py  hologram_removal.py  language.py  mrz_enhancement.py  orientation.py  perspective.py  sharpen.py  smooth.py  text_refine.py  text_segmentation.py  watermark_removal.py
autoocr/api/utils/: __init__.py  config.py  config_loader.py  gpu_manager.py  image_io.py  logging.py  metrics.py  ocr_harness.py  security_detector.py
autoocr/docs/: README.md
autoocr/frontend/react-app/: README.md  index.html  newocr.code-workspace  package-lock.json  package.json  vite.config.ts
autoocr/frontend/react-app/src/: App.tsx
autoocr/frontend/react-app/src/components/: PdfViewer.tsx  (+2 more)
autoocr/tests/: conftest.py  test_harness.py  test_image_io.py  test_language_module.py  test_ocr_harness.py  test_process_json.py
config/: ocr_optimized.yaml  security.yaml  standard.yaml
tests/: test_security_features.py
